Adaptando A configuração do cors para Java 8